test/tests/errors/error-procedure-no-rec.sm
// true
// false
// false
/**/
/**/

program {
    proc sum(x: int) {
        if (x == 0) {}
        else {output x; sum(x - 1);}
    }
    sum(5);
}